css/main.css
body {
    --text-color: #969696;
    --table-width: calc(min(calc(100vw - 2px), 500px));
    --background-color: #0b1e01;

    background-color: var(--background-color);
    margin: 0;
    display: flex;
    justify-content: center;
    color: var(--text-color);
}

h1, h2 {
    font-size: 64px;
    text-align: center;
}
h1 {
    font-size: 64px;
}
h2 {
    font-size: 36px;
}

button {
    color: var(--text-color);
    background-color: var(--background-color);
    border: solid 1px var(--text-color);
}

#PlayingTable {
    display: grid;
    grid-template-areas: "DealerSection" "PlayerSection";
    height: calc(100vh - 4rem);
    width: var(--table-width);
    margin: 1rem 1rem 2rem;
}
@supports (height: 100dvh) {
    #PlayingTable {
        height: calc(100dvh - 3rem)
    }
}

#DealerHeader {
    border: none;
    width: 100%;
    padding: 0;

    div {
        padding: .25rem 0;
    }
    div:not(.score) {
        border: solid 1px var(--text-color);
        border-bottom: none;
        font-size: 20px;
    }
}

#PlayerSection {
    align-content: end;
}

#Results {
    display: flex;
    text-align: center;

    #Correct, #Record {
        width: 50%;
        border: solid 1px var(--text-color);
        color: var(--text-color);
        font-size: 20px;
    }
}

.card-section {
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
    min-height: 108px;
}
.score {
    border: solid 1px var(--text-color);
    color: var(--text-color);
    font-size: 32px;
    text-align: center;
}
.playing-card {
    --text-color: black;
    --background-color: #969696;
    cursor: default;
    background-color: var(--background-color);
    border: solid 1px var(--text-color);
    height: 100px;
    line-height: 50px;
    text-align: center;
    font-size: 48px;
    width: 60px;
    margin: 3px;
    color: var(--text-color);
}
.spades {
    color: black;
    &::after {
        content: "\2660";
    }
}
.clubs {
    color: black;
    &::after {
        content: "\2663";
    }
}
.hearts {
    color: darkred;
    &::after {
        content: "\2665";
    }
}
.diamonds {
    color: darkred;
    &::after {
        content: "\2666";
    }
}

#ButtonsParent {
    height: 100px;
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: center;

    button {
        height: 3rem;
        margin: 0.25rem;
        background-color: var(--background-color);
        border: solid 1px var(--text-color);
        font-size: 16px;
        line-height: 0;
        width: 25%;

        &:hover {
            cursor: pointer;
            background-color: var(--text-color);
            color: var(--background-color);
        }
    }
}

#PlayingCardDeck {
    display: none;
    margin-top: 1rem;
    margin-bottom: 1rem;
    position: relative;
}

#PlayingCardDeck > .playing-card,
.playing-card.flipped {
    color: var(--text-color);
    background-color: var(--text-color);
    border: solid 1px var(--background-color);
}

.collapse {
    display: none;
}
.hidden {
    visibility: hidden;
}

#WinText,
#LoseText,
#PushText,
.placeholder {
    text-align: center;
    height: 64px;
    line-height: 64px;
    padding: 1rem;
    font-size: 64px;
}

#WinText {
    background-color: rgba(36, 102, 70, 0.7);
}
#LoseText {
    background-color: rgba(127, 1, 1, 0.7);
}
#PushText {
    background-color: rgba(76, 76, 76, 0.7);
}

#Overlay {
    position: fixed;
    top: 20%;
    height: 250px;
    width: var(--table-width);
    display: flex;
    flex-direction: column;
}

#BasicStrategyGuide {
    z-index: 9999;
    background-color: var(--background-color);
    position: fixed;
    width: 100vw;
    width: var(--table-width);
    max-height: 100vh;
    overflow: auto;
    
    #CloseBasicStrategyGuide {
        position: absolute;
        top: 1rem;
        right: 1rem;
        padding: .5rem 1rem;
        font-size: 15px;
    }

}
@supports (height: 100dvh) {
    #BasicStrategyGuide {
        height: 100dvh;
    }
}

#tblBasicStrategy {
    width: calc(100% - 2rem);
    margin: 1rem;
    font-size: 16px;
    border-collapse: collapse;

    td {
        width: 9%;
        text-align: center;
        border: solid 1px var(--text-color);
        padding: .5rem;
    }
    td.stand {
        color: #727c00;
        &::after {
            content: "S";
        }
    }
    td.hit {
        &::after {
            content: "H";
        }
    }
    td.double {
        color: #048c26;
        &::after {
            content: "D";
        }
    }
    td.double-stand {
        color: #009b91;
        padding: 0;
        &::after {
            content: "Ds";
        }
    }
    td.yes {
        color: #048c26;
        &::after {
            content: "Y";
        }
    }
    td.no {
        &::after {
            content: "N";
        }
    }
    td.yes-no {
        color: #009b91;
        padding: 0;
        &::after {
            content: "YN";
        }
    }
    td.surrender {
        color: #048c26;
        &::after {
            content: "R";
        }
    }
}

#tblGuideKey {
    width: calc(100% - 2rem);
    margin: 1rem;
    font-size: 16px;
    border-collapse: collapse;
    td {
        border: solid 1px var(--text-color);
        padding: .25rem .5rem;
    }
    td:first-child {
        text-align: center;
    }
}

